--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,7 @@ nav li a{
     color: #222;
 }*/
 /*  BLOCK14 h=199 */
+		
 .block14-contacts-information-logos{
     background: #ffffff;
     padding: 194px 64px;
@@ -1789,9 +1790,32 @@ nav li a{
 
 
 	/* BL 15 h= from idress4weather bl45*/
+		
+		
+
+
 	.block15-logo-section{
     padding: 0px 0px;
     background: #131313;
+}
+		 .block15-contacts-information-before-footer-t-t-t-t{
+    background: #242424;
+    padding: 0;
+
+  
+}
+		.block15-inner-static-info-t-t-t-t{
+    float: left;    
+    width: 100%;    
+    min-height: 350px;
+    padding: 170px 67px;
+}
+		
+.content25-t-t-t-t {
+    float: left;
+    width: 25%;
+    border-right: 2px solid #ccc
+    
 }
 	.block15-static-info {
     float: left;
@@ -1846,9 +1870,9 @@ padding-left: 35px;
     -webkit-column-width: 200px;
     -moz-column-width: 200px;
     column-width: 200px;
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
+    -webkit-column-count: 4;
+    -moz-column-count: 4;
+    column-count: 4;
     -webkit-column-gap: 30px;
     -moz-column-gap: 30px;
     column-gap: 30px;
@@ -1856,6 +1880,11 @@ padding-left: 35px;
     -moz-column-rule: 1px solid red;
     column-rule: 1px solid red;
    }
+   /* <div class="block15-contacts-information-before-footer-t-t-t-t clearfix" >        
+        <div class="block15-inner-static-info-t-t-t-t">
+             <div class="block15-row">
+            <ul>
+                <li class="content25-t-t-t-t"> */	 
   </style>
  <div class="block15-logo-section clearfix">	
 	 <div class="block15-static-info">
