--- a/index.html
+++ b/index.html
@@ -1876,9 +1876,9 @@ padding-left: 35px;
     -webkit-column-gap: 30px;
     -moz-column-gap: 30px;
     column-gap: 30px;
-    -webkit-column-rule: 1px solid red;
-    -moz-column-rule: 1px solid red;
-    column-rule: 1px solid red;
+    -webkit-column-rule: 1px solid #ccc;
+    -moz-column-rule: 1px solid #ccc;
+    column-rule: 1px solid #ccc;
    }
    /* <div class="block15-contacts-information-before-footer-t-t-t-t clearfix" >        
         <div class="block15-inner-static-info-t-t-t-t">
