--- a/index.html
+++ b/index.html
@@ -2134,15 +2134,30 @@ nav li:nth-child(4) a {
 
 .masonry-layout {
   column-count: 4;
+  -webkit-column-count: 4;
   column-gap: 0;
+  -webkit-column-gap: 0;
 }
 .masonry-layout__panel {
   break-inside: avoid;
+  -webkit-column-break-inside: avoid;
   padding: 5px;
 }
 .masonry-layout__panel-content {
   padding: 10px;
   border-radius: 10px;
+}
+.bg--red {
+  background-color: #E74C3C;
+}
+.bg--green {
+  background-color: #26A65B;
+}
+.bg--purple {
+  background-color: #8E44AD;
+}
+.bg--orange {
+  background-color: #F89406;
 }	
 </style>
          
