--- a/index.html
+++ b/index.html
@@ -2213,7 +2213,8 @@ nav li:nth-child(4) a {
 
 						<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
                     </p>
-               
+                 </div>
+               <div class="block15-2">
                     <p><span class="block15-title-red">Recent posts</span></p>
                     <p><span class="block15-subtitle">UPS 101</span></p>
 					<p><span class="block15-subtitle">How Do You Rate?Understanding</span></p>
@@ -2221,7 +2222,7 @@ nav li:nth-child(4) a {
 					<p><span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span></p>
 					<p><span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span></p>
                  </div>
-               <div class="block15-">
+               <div class="block15-3">
                     <p><span class="block15-title-red">Recent tweets</span></p>
                     <p>                        
                         <span class="block15-subtitle">Sure Power is 600 Days Injury Free
@@ -2232,7 +2233,7 @@ nav li:nth-child(4) a {
 							162 days ago</span>
                     </p>
 		   </div>
-               <div class="block15-">
+               <div class="block15-4">
                     <p><span class="block15-title-red">Contact information</span></p>
                     <p>
                         <span class="block15-subtitle">Call-free: 800-455-0054</span>
