--- a/index.html
+++ b/index.html
@@ -2207,40 +2207,36 @@ nav li:nth-child(4) a {
 	 <div class="block15-static-info">        
            <div class="block15-1">
                 
-                    <p><span class="block15-title-red">About Us</span></p>
-                    <p>
-                        <span class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</span>
+                    <p class="block15-title-red">About Us</p>
+                    <p class="block15-subtitle">Supplier of superior quality stationary backup battery power products, UPS rentals and services that maximize critical power integrity and customer satisfaction.</p>
 
-						<span class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</span>
-                    </p>
+						<p class="block15-subtitle">Sure Power, Inc. is a leading distributor for the following battery power products: CD Technologies, EnerSys and East Penn Manufacturing. Call today to find how we can help you and your organization with battery backup, UPS rentals and critical power system services.</p> </p>
                  </div>
                <div class="block15-2">
-                    <p><span class="block15-title-red">Recent posts</span></p>
-                    <p><span class="block15-subtitle">UPS 101</span></p>
-					<p><span class="block15-subtitle">How Do You Rate?Understanding</span></p>
-					<p><span class="block15-subtitle">Ratings Beyond AA</span></p>
-					<p><span class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</span></p>
-					<p><span class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</span></p>
+                    <p class="block15-title-red">Recent posts</p>
+                    <p><span class="block15-subtitle">UPS 101</p>
+					<p class="block15-subtitle">How Do You Rate?Understanding</p>
+					<p class="block15-subtitle">Ratings Beyond AA</p>
+					<p class="block15-subtitle">Six Critical Needs for any Critical Power Maintenance Provider</p>
+					<p class="block15-subtitle">Are You at Risk for These Leading Causes of UPS Power Failure?</p>
                  </div>
                <div class="block15-3">
-                    <p><span class="block15-title-red">Recent tweets</span></p>
-                    <p>                        
-                        <span class="block15-subtitle">Sure Power is 600 Days Injury Free
+                    <p class="block15-title-red">Recent tweets</p>
+                    <p class="block15-subtitle">Sure Power is 600 Days Injury Free
 							Https://t.co/3fjAz1RKUo<br>
-							8 days ago</span>
-						<span class="block15-subtitle">
+							8 days ago
+						<p class="block15-subtitle">
 							Deta's system meltdown causes canceled flights,<br> puts focus on aging technology https://t.co/HZIM3gdEY7 via @WSJ The Wall Street Journal<br>
-							162 days ago</span>
+							162 days ago</p>
                     </p>
 		   </div>
                <div class="block15-4">
-                    <p><span class="block15-title-red">Contact information</span></p>
-                    <p>
-                        <span class="block15-subtitle">Call-free: 800-455-0054</span>
-                        <span class="block15-title">Philadelphia Area:</span>
-                        <span class="block15-subtitle">200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</span>
-                        <span class="block15-title">BaltimoreArea:</span>
-                        <span class="block15-subtitle">3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016</span>
+                    <p class="block15-title-red">Contact information</p>
+                    <p class="block15-subtitle">Call-free: 800-455-0054</p>
+                        <p class="block15-title">Philadelphia Area:</p>
+                        <p class="block15-subtitle">200 Industrial Highway Ridley Park, PA 19078 Phone: 610-583-9640 Fax: 610-583-9650</p>
+                        <p class="block15-title">BaltimoreArea:</p>
+                        <p class="block15-subtitle">3620 Commerce Dr, Suite 710 Halethorpe, MD 21227 Phone: 10-22-5200 Fax: 410-242-9016
                     </p>
                  </div>
                
