--- a/index.html
+++ b/index.html
@@ -2178,14 +2178,14 @@ nav li:nth-child(4) a {
     
     padding: 0px;
 }
-.block15-1{ float: left; }
-.block15-2{ float: left; }
-.block15-3{ float: left; }
-.block15-4{ float: left; }
-.block15-1 p > span{margin-bottom: 26px; border-right: 1px solid #ccc;}
-.block15-2 p > span{margin-bottom: 26px; border-right: 1px solid #ccc;}
-.block15-3 p > span{margin-bottom: 26px; border-right: 1px solid #ccc;}
-.block15-4 p > span{margin-bottom: 26px;}
+.block15-1{ float: left; border-right: 1px solid #ccc;}
+.block15-2{ float: left; border-right: 1px solid #ccc; }
+.block15-3{ float: left; border-right: 1px solid #ccc; }
+.block15-4{ float: left;  }
+.block15-1 p {margin-bottom: 26px; }
+.block15-2 p {margin-bottom: 26px;}
+.block15-3 p {margin-bottom: 26px;}
+.block15-4 p {margin-bottom: 26px;}
 .block15-title-red{
     color: red;
     font-weight: 600;
