--- a/index.html
+++ b/index.html
@@ -2178,12 +2178,12 @@ nav li:nth-child(4) a {
         width: 100%;    
     min-height: 350px;
     float: left; 
-    padding: 0px;
+    padding: 20px;
 }
 .block15-1{ float: left; border-right: 1px solid #ccc; width: 25%}
 .block15-2{ float: left; border-right: 1px solid #ccc; width: 25%}
 .block15-3{ float: left; border-right: 1px solid #ccc; width: 25%}
-.block15-4{ float: left;  width: 25%}
+.block15-4{ float: left; border-right: none; width: 25%}
 .block15-1 p {margin-bottom: 26px; }
 .block15-2 p {margin-bottom: 26px;}
 .block15-3 p {margin-bottom: 26px;}
