--- a/index.html
+++ b/index.html
@@ -1902,7 +1902,100 @@ nav li a{
         </div>
     </div>
 </section>	
-		
+<footer>
+    <div class=”footer_about”>
+	<p class="block15-title">About us</p>
+             			<p>Supplier of superior quality
+                        stationary backup battery power 
+                         products, UPS rentals and services
+                            that maximize critical power
+                             integrity and customer satisfaction.</p>
+                            <!--br-->
+                            <p>Sure Power, Inc. is a leading
+                             distributor for the following battery
+                             power products: CD Technologies,
+                            EnerSys and East Penn
+                            Manufacturing. Call today to find
+                            how we can help you and your
+                             organization with battery backup,
+                            UPS rentals and critical power
+                            system services.</p>
+	</div>
+    <div class=”values”>
+	<p class="block15-title">Recent posts</p>
+             			<p>UPS 101</p>
+                            <!--br-->
+                        <p>How Do You Rate?Understanding</p>
+                            <!--br-->
+                        <p>Ratings Beyond AA</p>
+                            <!--br-->
+                        <p>Six Critical Needs for any Critical Power Maintenance Provider</p>
+                            <!--br-->
+                        <p>Are You at Risk for These Leading
+                         Causes of UPS Power Failure?</p>
+                                 
+	</div>
+    <div class=”tweets”>
+	 <p class="block15-title">Recent posts</p>
+             			<p>UPS 101</p>
+                            <!--br-->
+                        <p>How Do You Rate?Understanding</p>
+                            <!--br-->
+                        <p>Ratings Beyond AA</p>
+                            <!--br-->
+                        <p>Six Critical Needs for any Critical Power Maintenance Provider</p>
+                            <!--br-->
+                        <p>Are You at Risk for These Leading
+                         Causes of UPS Power Failure?</p>
+	</div>
+    <div class=”contacts”>
+	<p class="block15-title">Contact information</p>
+             			<p>Call-free: 800-455-0054</p>
+                        <p class="block15-subtitle-red">Philadelphia Area:
+                        <br class="block15-subtitle">200 Industrial Highway
+                        Ridley Park, PA 19078
+                        Phone: 610-583-9640
+                        Fax: 610-583-9650</p>
+                            
+                        <p class="block15-subtitle-red">BaltimoreArea:
+                        <br class="block15-subtitle">3620 Commerce Dr, Suite 710
+                        Halethorpe, MD 21227
+                        Phone: 10-22-5200
+                        Fax: 410-242-9016</p>
+	</div>	
+    <div class="copyright">
+	<div class="r-footer">
+            <p>Copiright @ 2017 Sure Power Inc. All Rights Reserved. Employee Intranet<br></p>
+        </div>
+        <div class="l-footer">
+            <p>Powered by WordPress.Developed by Celerify<br></p>
+        </div>
+	</div>
+</footer>
+
+<style>
+footer{
+ height: auto;
+ padding:1px 15px 1px 20px;
+ clear:both;
+ }
+.footer_about{
+float:left;
+}
+.values{
+ float:none;
+ padding:0 600px 0 0;
+ text-align:justify;
+ }
+.tweets{
+float: right;
+
+}
+
+.copyright{
+float:none;
+text-align:center;
+}</style>		
 
 </body>
 </html>
