--- a/index.html
+++ b/index.html
@@ -948,28 +948,31 @@ nav li a:hover{
 
 </section>
 <!--11-bg#3e302e-NOT-->
+
+<!--11-bg#3e302e-NOT-->
+
 <section>
     <div class="block11-logo-section-upsl-logo-critical-text clearfix">
-        <div class="block11-example2">
+        <div class="example2">
            <div class="block11-row">
-             <div class="content64-nopic-pic">
+                <div class="content64-nopic-pic">
                     <div class="inner-content64-nopic-pic">
-                        <img src="">
-                            <span><div class="block11-logo">
-                            <img src="img/logo.png" alt="logo">
-                            </div></span>
-                            <span><div class="block11-block2-static-info-l"><div class="block11-title">Critical Power Applications</div></div></span>    
+                    	<p>                       
+                            <span class="block11-logo">
+                            <img src="img/upsrental.png" alt="logo">
+                            </span>
+                            <span class="block11-block2-static-info-l" class="block11-title">Critical Power Applications</span>
+                        </p>        
                     </div> 
-              </div>
-              <div class="content36-nopic-pic">
+                </div>
+                <div class="content36-nopic-pic">
                     <div class="inner-content36-nopic-pic">
-                        <img src="img/slide-1.jpg" alt="">                                
+                         <img src="img/track.png">    
                     </div>
-               </div>
+                </div>
            </div>
         </div>
     </div>
-
 </section>
 <!--12-pic url-->
 
@@ -1814,8 +1817,8 @@ nav li a{
 }
 		
 	
-<footer>
-    <div class=”footer_about”>
+<div class="footer">
+    <div class="footer_about">
 	<p class="block15-title">About us</p>
              			<p>Supplier of superior quality
                         stationary backup battery power 
@@ -1833,7 +1836,7 @@ nav li a{
                             UPS rentals and critical power
                             system services.</p>
 	</div>
-    <div class=”values”>
+    <div class="values">
 	<p class="block15-title">Recent posts</p>
              			<p>UPS 101</p>
                             <!--br-->
@@ -1847,7 +1850,7 @@ nav li a{
                          Causes of UPS Power Failure?</p>
                                  
 	</div>
-    <div class=”tweets”>
+    <div class="tweets">
 	 <p class="block15-title">Recent posts</p>
              			<p>UPS 101</p>
                             <!--br-->
@@ -1860,7 +1863,7 @@ nav li a{
                         <p>Are You at Risk for These Leading
                          Causes of UPS Power Failure?</p>
 	</div>
-    <div class=”contacts”>
+    <div class="contacts">
 	<p class="block15-title">Contact information</p>
              			<p>Call-free: 800-455-0054</p>
                         <p class="block15-subtitle-red">Philadelphia Area:
@@ -1883,10 +1886,11 @@ nav li a{
             <p>Powered by WordPress.Developed by Celerify<br></p>
         </div>
 	</div>
-</footer>
+</div>
 
 <style>
-footer{
+.footer{
+	background: #000;
  height: auto;
  padding:1px 15px 1px 20px;
  clear:both;
