--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 			<div class="social-icons">
 				<ul>
 					<li>
-						<a href="%3C#%3E" target="blank"><i aria-hidden="true" class="fa fa-envelope"></i></a>
+						<a href="#" target="blank"><i aria-hidden="true" class="fa fa-envelope"></i></a>
 					</li>
 					<li>
-						<a href="%3C#%3E" target="blank"><i aria-hidden="true" class="fa fa-youtube"></i></a>
+						<a href="#" target="blank"><i aria-hidden="true" class="fa fa-youtube"></i></a>
 					</li>
 					<li>
-						<a href="%3C#%3E" target="blank"><i aria-hidden="true" class="fa fa-google-plus"></i></a>
+						<a href="#" target="blank"><i aria-hidden="true" class="fa fa-google-plus"></i></a>
 					</li>
 					<li>
-						<a href="%3C#%3E" target="blank"><i aria-hidden="true" class="fa fa-linkedin"></i></a>
+						<a href="#" target="blank"><i aria-hidden="true" class="fa fa-linkedin"></i></a>
 					</li>
 					<li>
-						<a href="%3C#%3E" target="blank"><i aria-hidden="true" class="fa fa-twitter"></i></a>
+						<a href="#" target="blank"><i aria-hidden="true" class="fa fa-twitter"></i></a>
 					</li>
 				</ul>
 			</div>
