--- a/index.html
+++ b/index.html
@@ -66,93 +66,8 @@
 				</ul>
 			</div>
 		</div>
-		<div id="slider">
-			<div class="block3 navigation clearfix">
-				<nav class="mobile-menu">
-					<ul>
-						<li class="current">
-							<a href="/">Home</a>
-						</li>
-						<li>
-							<a href="/pages/about.php">About</a>
-						</li>
-						<li>
-							<a href="/pages/Products">Products</a>
-						</li>
-						<li>
-							<a href="/pages/Services">Services</a>
-						</li>
-						<li>
-							<a href="/pages/Rentals">Rentals</a>
-						</li>
-						<li>
-							<a href="/pages/Learning">Learning</a>
-						</li>
-						<li>
-							<a href="/pages/Contact">Contact</a>
-						</li>
-					</ul>
-				</nav>
-				<div class="search">
-					<i aria-hidden="true" class="fa fa-search"></i>
-				</div>
-			</div><!--BLOCK4-->
-			<div class="block4-carusel">
-				<div class="carousel" id="carousel">
-					<div class="gallery">
-						<ul class="images">
-							<li><img src="img/man.jpg"></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="but">
-				<div class="arrow left">
-					<i aria-hidden="true" class="fa fa-angle-left"></i>
-				</div>
-				<div class="arrow right">
-					<i aria-hidden="true" class="fa fa-angle-right"></i>
-				</div>
-			</div>
-			<div class="block4-example2">
-				<ul>
-					<li>
-						<p class="block4-title-red">We provide innovative</p>
-					</li>
-					<li>
-						<p class="block4-title">Battery back-up solutions for bussiness.</p>
-					</li>
-					<li>
-						<p class="block4-title-last">Vrla batteries are in stock for immediate delivery.</p>
-					</li>
-				</ul>
-			</div>
-		</div><!--/rel-->
-	</header>
-	<section>
-		<div class="block6-logo-section2-contacts-information1-text-nav clearfix">
-			<div class="block6-left-text-static-info">
-				<div class="block6-first-item">
-					<ul>
-						<li>
-							<p class="block6-title">Reuest a Free Site Survey or Quote</p>
-						</li>
-						<li>
-							<p class="block6-subtitle">UPS Battery and Uninterruptible Power Supply Sales and Installation</p>
-						</li>
-					<ul>	
-				</div>
-			</div>
-			<div class="right-button">
-				<a class="button" href="#">Get a Quote <!--o rbutton>Get a Quote</button  wuth js click--></a>
-			</div>
-		</div>
-	</section>
-			<style>
-			* {
-	margin: 0;
-	padding: 0;
-}
+		<style>
+		
 
 /*, *:after, *:before {
   -webkit-box-sizing: border-box;
@@ -160,6 +75,10 @@
   box-sizing: border-box;
 }*/
 
+* {
+	margin: 0;
+	padding: 0;
+}			
 body {
 	font: 400 14px/1.5 'Hind', sans-serif;
 	color: #565655;
@@ -293,182 +212,280 @@ a:hover {
 		padding-right: 0;
 		margin-right: 0;
 	}
-	/*  BLOCK3  */
-	/*.rel {*/
-	#slider {
-		position: relative;
-		overflow: hidden;
-	}
-	.mobile-menu {}
-	.navigation {
-		background: rgba(0, 0, 0, .8);
-		padding: 0 127px;
-		position: absolute;
-		left: 0;
-		right: 0;
-	}
-	.navigation nav {
-		float: left;
-	}
-	nav li a {
-		color: #fff;
-		font-size: 16px;
-		padding: 24px 16px 16px;
-		display: inline-block;
-		text-transform: uppercase;
-		border-bottom: 7px solid transparent;
-	}
-	nav li a:hover {
-		color: #fff;
-		border-bottom: 6px solid #bd2631;
-	}
-	.current a {
-		border-bottom: 6px solid #bd2631;
-	}
-	.search {
-		float: right;
-		color: #fff;
-		line-height: 3.5;
-		font-size: 19px;
-	}
-	/*BLOCK4*/
-	.block4-carusel {
-		background: none;
-		width: 100%;
-		height: 638px;
-		padding: 0;
-	}
-	.carusel img {
-		/* по умолчанию inline, в ряде браузеров это даст лишнее пространство вокруг элементов */
-		width: 100%;
-		height: auto;
-		display: block;
-	}
-	.arrow {
-		position: absolute;
-		width: 0;
-		/*27px*/
-		height: 0;
-		/*27px*/
-		top: 53%;
-		/*background: rgba(0,0,0,.8);*/
-		opacity: 0;
-		transition: 0.3s ease;
-		padding: 0;
-		font-size: 43px;
-	}
-	/*.arrow:focus {
+		</style>
+		<div id="slider">
+			<div class="block3 navigation clearfix">
+				<nav class="mobile-menu">
+					<ul>
+						<li class="current">
+							<a href="/">Home</a>
+						</li>
+						<li>
+							<a href="/pages/about.php">About</a>
+						</li>
+						<li>
+							<a href="/pages/Products">Products</a>
+						</li>
+						<li>
+							<a href="/pages/Services">Services</a>
+						</li>
+						<li>
+							<a href="/pages/Rentals">Rentals</a>
+						</li>
+						<li>
+							<a href="/pages/Learning">Learning</a>
+						</li>
+						<li>
+							<a href="/pages/Contact">Contact</a>
+						</li>
+					</ul>
+				</nav>
+				<div class="search">
+					<i aria-hidden="true" class="fa fa-search"></i>
+				</div>
+ <style>
+    /*  BLOCK3  */
+
+#slider{ 
+    position: relative;
+    overflow: hidden;     
+  }
+.mobile-menu{
+           
+            }
+
+.navigation{
+    background: rgba(0,0,0,.8);
+    padding: 0 127px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    
+}
+.navigation nav{
+    float: left;
+}
+nav li a{
+    color: #fff;
+    font-size: 16px;
+    padding: 24px 16px 16px;
+    display: inline-block;
+    text-transform: uppercase;
+    border-bottom: 7px solid transparent;
+}
+nav li a:hover{
+    color: #fff;
+    border-bottom: 6px solid #bd2631;
+}
+.current a{
+    border-bottom: 6px solid #bd2631;
+
+}
+.search{
+    float: right;
+    color: #fff;
+    line-height: 3.5;
+    font-size: 19px;
+}
+    </style>
+			</div><!--BLOCK4-->
+			<div class="block4-carusel">
+				<div class="carousel" id="carousel">
+					<div class="gallery">
+						<ul class="images">
+							<li><img src="img/man.jpg"></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="but">
+				<div class="arrow left">
+					<i aria-hidden="true" class="fa fa-angle-left"></i>
+				</div>
+				<div class="arrow right">
+					<i aria-hidden="true" class="fa fa-angle-right"></i>
+				</div>
+			</div>
+			<div class="block4-example2">
+				<ul>
+					<li>
+						<p class="block4-title-red">We provide innovative</p>
+					</li>
+					<li>
+						<p class="block4-title">Battery back-up solutions for bussiness.</p>
+					</li>
+					<li>
+						<p class="block4-title-last">Vrla batteries are in stock for immediate delivery.</p>
+					</li>
+				</ul>
+			</div>
+		</div><!--/rel-->
+		<!--BLOCK4-->
+		
+	<style>
+.block4-carusel {
+	background: none;
+	width: 100%;
+	height: 638px;
+	padding: 0;
+}
+.carusel img {
+	/* по умолчанию inline, в ряде браузеров это даст лишнее пространство вокруг элементов */
+	width: 100%;
+	height: auto;
+	display: block;
+}
+.arrow {
+	position: absolute;
+	width: 0;
+	/*27px*/
+	height: 0;
+	/*27px*/
+	top: 53%;
+	/*background: rgba(0,0,0,.8);*/
+	opacity: 0;
+	transition: 0.3s ease;
+	padding: 0;
+	font-size: 43px;
+}
+
+/*.arrow:focus {
   outline: none;
 }*/
-	.arrow:hover {
-		cursor: pointer;
-		/*  background: rgba(0,0,0,.8);  
+
+.arrow:hover {
+	cursor: pointer;
+	/*  background: rgba(0,0,0,.8);  
 top: 255px;	
 width: 27px;
 height:  27px;
 padding: 10px;*/
-	}
-	.left {
-		left: -20px;
-	}
-	.right {
-		right: -20px;
-	}
-	#slider:hover .left {
-		left: 20px;
-		opacity: 1;
-	}
-	#slider:hover .right {
-		right: 20px;
-		opacity: 1;
-	}
-	.gallery {
-		width: 100%;
-		overflow: hidden;
-	}
-	/*.but*/
-	.but {
-		margin-right: 57px;
-		padding: 0;
-	}
-	.fa fa-angle-left {
-		float: left;
-		margin-left: 57px;
-		height: 43px;
-		width: 25px;
-	}
-	.fa fa-angle-right {
-		float: right;
-		margin-right: 27px;
-		height: 43px;
-		width: 25px;
-	}
-	.block4-example2 {
-		position: absolute;
-		top: 282px;
-		bottom: 0;
-		right: 0;
-		left: 130px;
-		padding-left: 115px: padding-top: 222px;
-		float: left;
-	}
-	.block4-example2 p {
-		margin-bottom: 0;
-	}
-	.block4-title-red {
-		margin-bottom: 0;
-		color: red;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 32px;
-		font-weight: bold;
-	}
-	.block4-title {
-		color: #FFF;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 43px;
-		font-weight: bold;
-	}
-	.block4-title-last {
-		margin-top: 0;
-		color: #FFF;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 24px;
-		text-transform: uppercase;
-	}
-	.block6-logo-section2-contacts-information1-text-nav {
-		background: #bd2631;
-		padding: 30px 1px 34px 1px;
-	}
-	.block6-left-text-static-info {
-		float: left;
-	}
-	.block6-left-text-static-info p {
-		font-weight: 0;
-		color: #fff;
-		padding-left: 138px;
-	}
-	.block6-title {
-		font-size: 30px;
-	}
-	.block6-subtitle {
-		font-size: 24px;
-	}
-	.right-button {
-		float: right;
-		background: #ffffff;
-		color: #333;
-		border-radius: 3px;
-		display: block;
-		width: 105px;
-		padding: 12px;
-		margin: 0 25px;
-		text-decoration: none;
-		text-align: center;
-		font-weight: bold;
-		font-size: 18px;
-		margin-top: 13px;
-	}
+}
+.left {
+	left: -20px;
+}
+.right {
+	right: -20px;
+}
+#slider:hover .left {
+	left: 20px;
+	opacity: 1;
+}
+#slider:hover .right {
+	right: 20px;
+	opacity: 1;
+}
+.gallery {
+	width: 100%;
+	overflow: hidden;
+}
 
+/*.but*/
+
+.but {
+	margin-right: 57px;
+	padding: 0;
+}
+.fa fa-angle-left {
+	float: left;
+	margin-left: 57px;
+	height: 43px;
+	width: 25px;
+}
+.fa fa-angle-right {
+	float: right;
+	margin-right: 27px;
+	height: 43px;
+	width: 25px;
+}
+.block4-example2 {
+	position: absolute;
+	top: 282px;
+	bottom: 0;
+	right: 0;
+	left: 130px;
+	padding-left: 115px: padding-top: 222px;
+	float: left;
+}
+.block4-example2 p {
+	margin-bottom: 0;
+}
+.block4-title-red {
+	margin-bottom: 0;
+	color: red;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 32px;
+	font-weight: bold;
+}
+.block4-title {
+	color: #FFF;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 43px;
+	font-weight: bold;
+}
+.block4-title-last {
+	margin-top: 0;
+	color: #FFF;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 24px;
+	text-transform: uppercase;
+}
+</style>
+	</header>
+	<section>
+		<div class="block6-logo-section2-contacts-information1-text-nav clearfix">
+			<div class="block6-left-text-static-info">
+				<div class="block6-first-item">
+					<ul>
+						<li>
+							<p class="block6-title">Reuest a Free Site Survey or Quote</p>
+						</li>
+						<li>
+							<p class="block6-subtitle">UPS Battery and Uninterruptible Power Supply Sales and Installation</p>
+						</li>
+					<ul>	
+				</div>
+			</div>
+			<div class="right-button">
+				<a class="button" href="#">Get a Quote <!--o rbutton>Get a Quote</button  wuth js click--></a>
+			</div>
+		</div>
+	</section>
+			<style>
+.block6-logo-section2-contacts-information1-text-nav {
+	background: #bd2631;
+	padding: 30px 1px 34px 1px;
+}
+.block6-left-text-static-info {
+	float: left;
+}
+.block6-left-text-static-info p {
+	font-weight: 0;
+	color: #fff;
+	padding-left: 138px;
+}
+.block6-title {
+	font-size: 30px;
+}
+.block6-subtitle {
+	font-size: 24px;
+}
+.right-button {
+	float: right;
+	background: #ffffff;
+	color: #333;
+	border-radius: 3px;
+	display: block;
+	width: 105px;
+	padding: 12px;
+	margin: 0 25px;
+	text-decoration: none;
+	text-align: center;
+	font-weight: bold;
+	font-size: 18px;
+	margin-top: 13px;
+}
+			
 			</style>
 	<section>
 		<div class="block7-content-pic-pic-pic clearfix">
@@ -563,6 +580,91 @@ padding: 10px;*/
 			</div>
 		</div>
 	</section><!--10-bg#fffdfe-->
+<style>
+/*block 7*/
+
+.block7-content-pic-pic-pic, .block8-content-pic-pic-pic, .block9-content-pic-pic-pic {
+	background: none;
+	padding: 0;
+	margin: 0;
+}
+
+/*#black {
+	background: color: #000;
+	width: 100%;
+	float: left;
+	min-height: 452px;
+}*/
+
+.block7-inner-content-pic-pic-pic, .block8-inner-content-pic-pic-pic, .block9-inner-content-pic-pic-pic {
+	width: 100%;
+	float: left;
+	height: 452px;
+}
+.content50-pic-pic-pic {
+	width: 50%;
+	float: left;
+	position: relative;
+}
+.content25-pic-pic-pic {
+	width: 25%;
+	float: left;
+}
+inner-content25-pic-pic-pic {
+	width: 25%;
+	height: 452px;
+	margin-bottom: 0;
+}
+.inner-content50-pic-pic-pic {
+	width: 50%;
+	height: 452px;
+	margin-bottom: 0;
+}
+.inner-content25-pic-pic-pic img {
+	width: 100%;
+	height: 100%;
+	display: block;
+	margin-bottom: 0;
+}
+.inner-content50-pic-pic-pic img {
+	width: 100%;
+	height: 100%;
+	display: block;
+	margin-bottom: 0;
+}
+.block789-example-left {
+	float: left;
+	position: absolute;
+	top: 160px;
+	bottom: 0;
+	right: 0;
+	left: 40px;
+}
+.block789-example-left p {
+	margin-bottom: 0;
+}
+.block789-example-right {
+	float: right;
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding-right: 20px: padding-top: 118px;
+}
+.block789-example-right p {
+	margin-bottom: 0;
+}
+.block789-title-red {
+	margin-bottom: 0;
+	margin-right: 0;
+	color: red;
+	font-size: 30px;
+}
+.block789-title {
+	margin-right: 0;
+	color: #fff;
+	font-size: 14px;
+	margin-top: 20px;
+}</style>						
 	<section>
 		<div class="block10-static-info-sgr clearfix">
 			<div class="block10-sgr-item">
