--- a/index.html
+++ b/index.html
@@ -455,24 +455,31 @@ padding: 10px;*/
 			<style>
 .block6-logo-section2-contacts-information1-text-nav {
 	background: #bd2631;
-	padding: 30px 1px 34px 1px;
+	padding: 0;
 }
 .block6-left-text-static-info {
-	float: left;
+	
+	padding: 100px 50px;
 }
 .block6-left-text-static-info p {
 	font-weight: 0;
 	color: #fff;
 	padding-left: 138px;
 }
+				.block6-first-item{
+				float: left;
+				}
+				.right-button{
+					float: right;
+				}
 .block6-title {
 	font-size: 30px;
 }
 .block6-subtitle {
 	font-size: 24px;
 }
-.right-button {
-	float: right;
+.button {
+	
 	background: #ffffff;
 	color: #333;
 	border-radius: 3px;
