--- a/index.html
+++ b/index.html
@@ -453,6 +453,50 @@ padding: 10px;*/
 		</div>
 	</section>
 			<style>
+				.block6-logo-section2-contacts-information1-text-nav {
+    background: #bd2631;
+     padding: 13px 100px;
+ }
+ .block6-left-text-static-info {
+    float: left;
+    padding-left: 35px;
+}
+.block6-left-text-static-info div {
+    display: block;
+    margin-right: 15px;
+}
+.block6-left-text-static-info ul li {
+    margin-left: 20px;
+}
+.block6-first-item p{
+
+   
+
+}
+
+.block6-title {
+    font-size: 30px;
+}
+.block6-subtitle {
+    font-size: 24px;
+}
+
+.right-button {
+    float: right;
+    background: #ffffff;
+    color: #333;
+    border-radius: 3px;
+    display: block;
+    width: 105px;
+    padding: 12px;
+    margin: 0 25px;
+    text-decoration: none;
+    text-align: center;
+    font-weight: bold;
+    font-size: 18px;
+    margin-top: 13px;
+}
+				/*
 .block6-logo-section2-contacts-information1-text-nav {
 	background: #bd2631;
 	padding: 0;
@@ -492,7 +536,7 @@ padding: 10px;*/
 	font-weight: bold;
 	font-size: 18px;
 	margin-top: 13px;
-}
+}*/
 			
 			</style>
 	<section>
