--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ a:hover {
 			</div>
 			<div class="block4-example2">
 				<p>
-						<span class="block4-title-red">We provide innovative</span>span>
+						<span class="block4-title-red">We provide innovative</span>
 					
 					
 						<span class="block4-title">Battery back-up solutions for bussiness.</span>
