--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ a:hover {
 	/*27px*/
 	height: 0;
 	/*27px*/
-	top: 53%;
+	top: 48%;
 	/*background: rgba(0,0,0,.8);*/
 	opacity: 0;
 	transition: 0.3s ease;
@@ -360,17 +360,17 @@ height:  27px;
 padding: 10px;*/
 }
 .left {
-	left: -20px;
+	left: -50px;
 }
 .right {
-	right: -20px;
+	right: -30px;
 }
 #slider:hover .left {
-	left: 20px;
+	left: 50px;
 	opacity: 1;
 }
 #slider:hover .right {
-	right: 20px;
+	right: 30px;
 	opacity: 1;
 }
 .gallery {
@@ -386,13 +386,13 @@ padding: 10px;*/
 }
 .fa fa-angle-left {
 	float: left;
-	margin-left: 87px;
+	/*margin-left: 57px;*/
 	height: 63px;
 	width: 25px;
 }
 .fa fa-angle-right {
 	float: right;
-	margin-right: 57px;
+	/*margin-right: 37px;*/
 	height: 63px;
 	width: 25px;
 }
