--- a/index.html
+++ b/index.html
@@ -619,13 +619,11 @@ padding: 10px;*/
 	float: left;
 	height: 452px;
 }
-.content50-pic-pic-pic {
-	width: 50%;
+.content50-pic-pic-pic {	
 	float: left;
-	position: relative;
+	position: relative;	
 }
-.content25-pic-pic-pic {
-	width: 25%;
+.content25-pic-pic-pic {	
 	float: left;
 }
 inner-content25-pic-pic-pic {
@@ -640,16 +638,17 @@ inner-content25-pic-pic-pic {
 }
 .inner-content25-pic-pic-pic img {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	display: block;
 	margin-bottom: 0;
 }
 .inner-content50-pic-pic-pic img {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	display: block;
 	margin-bottom: 0;
 }
+	/*text*/
 .block789-example-left {
 	float: left;
 	position: absolute;
