--- a/index.html
+++ b/index.html
@@ -629,24 +629,24 @@ padding: 10px;*/
 inner-content25-pic-pic-pic {
 	width: 25%;
 	height: 452px;
-	margin-bottom: 0;
+	
 }
 .inner-content50-pic-pic-pic {
 	width: 50%;
 	height: 452px;
-	margin-bottom: 0;
+	
 }
 .inner-content25-pic-pic-pic img {
-	width: 100%;
+	width: auto;
 	height: auto;
 	display: block;
-	margin-bottom: 0;
+	
 }
 .inner-content50-pic-pic-pic img {
-	width: 100%;
+	width: auto;
 	height: auto;
 	display: block;
-	margin-bottom: 0;
+	
 }
 	/*text*/
 .block789-example-left {
