--- a/index.html
+++ b/index.html
@@ -514,10 +514,10 @@ padding: 10px;*/
 
 	<section>
 		<div class="block7-content-pic-pic-pic clearfix">
-			<div class="block7-inner-content-pic-pic-pic" id="black">
+			<div class="block7-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
-						<div class="inner-content50-pic-pic-pic"><img alt="" src="img/Products.jpg"></div>
+						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/Products.jpg"><!--/div-->
 						<div class="block789-example-left">
 						<p>
                     				<span class="block789-title-red">Products</p></span>
@@ -533,10 +533,10 @@ padding: 10px;*/
 						</div>
 					</div>
 					<div class="content25-pic-pic-pic">
-						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/loader.jpg"></div>
+						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/loader.jpg"><!--/div-->
 					</div>
 					<div class="content25-pic-pic-pic">
-						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/acum.png"></div>
+						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/acum.png"><!--/div-->
 					</div>
 				</div>
 			</div><!--/div>
@@ -621,28 +621,30 @@ padding: 10px;*/
 }
 .content50-pic-pic-pic {	
 	float: left;
-	position: relative;	
+	position: relative;
+	width: 50%;
+	height: 452px;
 }
 .content25-pic-pic-pic {	
 	float: left;
-}
-inner-content25-pic-pic-pic {
 	width: 25%;
 	height: 452px;
+}
+inner-content25-pic-pic-pic {
+	
 	
 }
 .inner-content50-pic-pic-pic {
-	width: 50%;
-	height: 452px;
+	
 	
 }
-.inner-content25-pic-pic-pic img {
+.content25-pic-pic-pic img {
 	width: auto;
 	height: auto;
 	display: block;
 	
 }
-.inner-content50-pic-pic-pic img {
+.content50-pic-pic-pic img {
 	width: auto;
 	height: auto;
 	display: block;
