--- a/index.html
+++ b/index.html
@@ -547,13 +547,13 @@ padding: 10px;*/
 			<div class="block8-inner-content-pic-pic-pic" id="black">
 				<div class="row">
 					<div class="content25-pic-pic-pic">
-						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/control.jpg"></div>
+						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/control.jpg"><!--/div-->
 					</div>
 					<div class="content25-pic-pic-pic">
-						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/gear.png"></div>
+						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/gear.png"><!--/div-->
 					</div>
 					<div class="content50-pic-pic-pic">
-						<div class="inner-content50-pic-pic-pic"><img alt="" src="img/services.png"></div>
+						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/services.png"><!--/div-->
 						<div class="block789-example-right">
 						<p>
                     				<span class="block789-title-red">Services</p></span>
@@ -575,7 +575,7 @@ padding: 10px;*/
 			<div class="block9-inner-content-pic-pic-pic" id="black">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
-						<div class="inner-content50-pic-pic-pic"><img alt="" src="img/disposal.jpg"></div>
+						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/disposal.jpg"><!--/div-->
 						<div class="block789-example-left">
 						<p>
                     				<span class="block789-title-red">Battery Disposal</p></span>
@@ -589,10 +589,10 @@ padding: 10px;*/
 						</div>
 					</div>
 					<div class="content25-pic-pic-pic">
-						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/trash.png"></div>
+						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/trash.png"><!--/div-->
 					</div>
 					<div class="content25-pic-pic-pic">
-						<div class="inner-content25-pic-pic-pic"><img alt="" src="img/ups.png"></div>
+						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/ups.png"><!--/div-->
 					</div>
 				</div>
 			</div>
