--- a/index.html
+++ b/index.html
@@ -639,13 +639,13 @@ inner-content25-pic-pic-pic {
 	
 }
 .content25-pic-pic-pic img {
-	width: 100%;
+	width: auto;
 	height: auto;
 	display: block;
 	
 }
 .content50-pic-pic-pic img {
-	width: 100%;
+	width: auto;
 	height: auto;
 	display: block;
 	
