--- a/index.html
+++ b/index.html
@@ -532,10 +532,10 @@ padding: 10px;*/
 						</p>	
 						</div>
 					</div>
-					<div class="content25-pic-pic-pic">
+					<div class="content30-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/loader.jpg"><!--/div-->
 					</div>
-					<div class="content25-pic-pic-pic">
+					<div class="content20-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/acum.png"><!--/div-->
 					</div>
 				</div>
@@ -544,15 +544,15 @@ padding: 10px;*/
 
 <section>  
     <div class="block8-content-pic-pic-pic clearfix"-->
-			<div class="block8-inner-content-pic-pic-pic" id="black">
+			<div class="block8-inner-content-pic-pic-pic">
 				<div class="row">
-					<div class="content25-pic-pic-pic">
+					<div class="content20-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/control.jpg"><!--/div-->
 					</div>
-					<div class="content25-pic-pic-pic">
+					<div class="content20-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/gear.png"><!--/div-->
 					</div>
-					<div class="content50-pic-pic-pic">
+					<div class="content60-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/services.png"><!--/div-->
 						<div class="block789-example-right">
 						<p>
@@ -572,7 +572,7 @@ padding: 10px;*/
 
 <section>  
     <div class="block9-content-pic-pic-pic clearfix"-->
-			<div class="block9-inner-content-pic-pic-pic" id="black">
+			<div class="block9-inner-content-pic-pic-pic">
 				<div class="row">
 					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/disposal.jpg"><!--/div-->
@@ -588,10 +588,10 @@ padding: 10px;*/
 						</p>
 						</div>
 					</div>
-					<div class="content25-pic-pic-pic">
+					<div class="content20-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/trash.png"><!--/div-->
 					</div>
-					<div class="content25-pic-pic-pic">
+					<div class="content30-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/ups.png"><!--/div-->
 					</div>
 				</div>
@@ -625,20 +625,34 @@ padding: 10px;*/
 	width: 50%;
 	height: 452px;
 }
-.content25-pic-pic-pic {	
+.content30-pic-pic-pic {	
 	float: left;
-	width: 25%;
+	width: 30%;
 	height: 452px;
 }
-inner-content25-pic-pic-pic {
+.content20-pic-pic-pic {	
+	float: left;
+	width: 20%;
+	height: 452px;
+}
+.content60-pic-pic-pic {	
+	float: left;
+	width: 60%;
+	height: 452px;
+}
+.content60-pic-pic-pic img {
+	width: auto;
+	height: auto;
+	display: block;
 	
+}	
+.content20-pic-pic-pic img {
+	width: auto;
+	height: auto;
+	display: block;
 	
 }
-.inner-content50-pic-pic-pic {
-	
-	
-}
-.content25-pic-pic-pic img {
+.content30-pic-pic-pic img {
 	width: auto;
 	height: auto;
 	display: block;
