--- a/index.html
+++ b/index.html
@@ -625,7 +625,8 @@ padding: 10px;*/
 	width: 50%;
 	height: 452px;
 }
-.content25-pic-pic-pic {	
+.content25-pic-pic-pic {
+	position: relative;
 	float: left;
 	width: 25%;
 	height: 452px;
