--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ padding: 10px;*/
 					</div>
 					<div class="content50-pic-pic-pic">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/services.png"><!--/div-->
-						<div class="block789-example-right">
+						<div class="block789-example-left">
 						<p>
                     				<span class="block789-title-red">Services</span>
 					
@@ -651,7 +651,7 @@ padding: 10px;*/
 .block789-example-left p > span{
     display: block;
 }
-.block789-example-right {
+/*.block789-example-right {
 	float: right;
 	position: absolute;
 	top: 160;
@@ -661,7 +661,7 @@ padding: 10px;*/
 .block789-example-right p {
 	margin-bottom: 0;
 	float: left;
-}
+}*/
 .block789-example-right p > span{
     display: block;
     margin-bottom: 10px;	
