--- a/index.html
+++ b/index.html
@@ -683,17 +683,17 @@ padding: 10px;*/
 			<div class="block10-sgr-item">
 				<ul>
 					<li>
-						<p><span><img alt="Safe" src="img/safe.png"></span> <span class="sgr-title">Safe</span> <span class="sgr-subtitle">CPR and forklift certified personnel<br>
+						<p><span class="block10-pic"><img alt="Safe" src="img/safe.png"></span> <span class="sgr-title">Safe</span> <span class="sgr-subtitle">CPR and forklift certified personnel<br>
 						Spill kits and safety kits on all sites and vehicles<br>
 						Certified and calibrated tools</span></p>
 					</li>
 					<li>
-						<p><span><img alt="Green" src="img/green.png"></span> <span class="sgr-title">Green</span> <span class="sgr-subtitle">Smelter facility for battery disposal<br>
+						<p><span class="block10-pic"><img alt="Green" src="img/green.png"></span> <span class="sgr-title">Green</span> <span class="sgr-subtitle">Smelter facility for battery disposal<br>
 						$5,000,000,00 pollution legal liabitity for the<br>
 						transportation and handling of lead acid batteries.</span></p>
 					</li>
 					<li>
-						<p><span><img alt="Ready" src="img/phone24.png"></span> <span class="sgr-title">Ready</span> <span class="sgr-subtitle">Toll free 24/7 emergency service line with<br>
+						<p><span class="block10-pic"><img alt="Ready" src="img/phone24.png"></span> <span class="sgr-title">Ready</span> <span class="sgr-subtitle">Toll free 24/7 emergency service line with<br>
 						immediate dispatching. Most products avaliable<br>
 						to ship within 24 hours.</span></p>
 					</li>
@@ -703,6 +703,10 @@ padding: 10px;*/
 	</section><!--11-bg#3e302e-NOT-->
 	<style>
 	/*  BLOCK10 h=461 */
+		.block10-pic{
+	width: 100%;
+	height: 100px;
+		}
 .block10-static-info-sgr{
     background: #fffdfe;
     padding: 0;
@@ -711,7 +715,7 @@ padding: 10px;*/
     padding-right: 167px;
     padding-top: 48px;
     float: left;
-    margin-right: 20px;
+    margin-right: 2px;
     text-align: center;
 }
 .block10-sgr-item img{
