--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@ padding: 10px;*/
 	<style>
 	/*  BLOCK10 h=461 */
 		.block10-pic{
-	width: 100%;
+	width: 100px;
 	height: 100px;
 		}
 .block10-static-info-sgr{
