--- a/index.html
+++ b/index.html
@@ -678,22 +678,35 @@ padding: 10px;*/
 	font-size: 14px;
 	margin-top: 20px;
 }</style>						
-	<section>
+	<section>   
 		<div class="block10-static-info-sgr clearfix">
+			<div class="block10-sgr-logos">
+				<ul>
+					<li>
+						<a href="#"><img alt="Safe" src="img/safe.png" title=""></a>
+					</li>
+					<li>
+						<a href="#"><img alt="Green" src="img/green.png" title=""></a>
+					</li>
+					<li>
+						<a href="#"><img alt="Ready" src="img/phone24.png" title=""></a>
+					</li>
+				</ul>
+			</div>
 			<div class="block10-sgr-item">
 				<ul>
 					<li>
-						<p><span class="block10-pic"><img alt="Safe" src="img/safe.png"></span> <span class="sgr-title">Safe</span> <span class="sgr-subtitle">CPR and forklift certified personnel<br>
+						<p><span class="sgr-title">Safe</span> <span class="sgr-subtitle">CPR and forklift certified personnel<br>
 						Spill kits and safety kits on all sites and vehicles<br>
 						Certified and calibrated tools</span></p>
 					</li>
 					<li>
-						<p><span class="block10-pic"><img alt="Green" src="img/green.png"></span> <span class="sgr-title">Green</span> <span class="sgr-subtitle">Smelter facility for battery disposal<br>
+						<p><span class="sgr-title">Green</span> <span class="sgr-subtitle">Smelter facility for battery disposal<br>
 						$5,000,000,00 pollution legal liabitity for the<br>
 						transportation and handling of lead acid batteries.</span></p>
 					</li>
 					<li>
-						<p><span class="block10-pic"><img alt="Ready" src="img/phone24.png"></span> <span class="sgr-title">Ready</span> <span class="sgr-subtitle">Toll free 24/7 emergency service line with<br>
+						<p><span class="sgr-title">Ready</span> <span class="sgr-subtitle">Toll free 24/7 emergency service line with<br>
 						immediate dispatching. Most products avaliable<br>
 						to ship within 24 hours.</span></p>
 					</li>
@@ -703,8 +716,15 @@ padding: 10px;*/
 	</section><!--11-bg#3e302e-NOT-->
 	<style>
 	/*  BLOCK10 h=461 */
-		.block10-pic{
-	width: 100px;
+.block10-sgr-logos ul li{
+	padding-top: 100px;	
+	 float: left;
+    padding-left: 50px;
+    margin right: 50px;
+		}
+		.block10-sgr-logos img {
+			display: block;
+			width: 100px;
 	height: 100px;
 		}
 .block10-static-info-sgr{
