--- a/index.html
+++ b/index.html
@@ -682,14 +682,14 @@ padding: 10px;*/
 		<div class="block10-static-info-sgr clearfix">
 			<div class="block10-sgr-logos">
 				<ul>
-					<li class="sgr-img">
-						<img alt="Safe" src="img/safe.png" title="">
+					<li>
+						<img class="sgr-img1" alt="Safe" src="img/safe.png" title="">
 					</li>
-					<li class="sgr-img">
-						<img alt="Green" src="img/green.png" title="">
+					<li>
+						<img class="sgr-img2" alt="Green" src="img/green.png" title="">
 					</li>
-					<li class="sgr-img">
-						<img alt="Ready" src="img/phone24.png" title="">
+					<li>
+						<img class="sgr-img3" alt="Ready" src="img/phone24.png" title="">
 					</li>
 				</ul>
 			</div>
@@ -716,9 +716,22 @@ padding: 10px;*/
 	</section><!--11-bg#3e302e-NOT-->
 	<style>
 	/*  BLOCK10 h=461 */
-		.class="sgr-img"{
-			margin-right:30px;
-		}
+		
+.sgr-img1{
+width: 100px;
+min-height: 140px;
+margin-right:80px;
+}
+.sgr-img2{
+width: 140px;
+min-height: 140px;
+margin-right:80px;
+}
+.sgr-img3{
+width: 150px;
+min-height: 140px;
+margin-right:80px;
+}		
 .block10-sgr-logos ul li{
 padding-top: 60px;	
 float: left;
@@ -727,8 +740,7 @@ padding-left: 220px;
 }
 .block10-sgr-logos img {
 display: block;
-width: 100px;
-min-height: 140px;
+
 }
 .block10-static-info-sgr{
     background: #fffdfe;
