--- a/index.html
+++ b/index.html
@@ -747,12 +747,10 @@ display: block;
     padding: 0;
 }
 .block10-sgr-item{
-    padding-left: 50px;	
-    padding-right: 20px;
     padding-top: 28px;
+    padding-top: 75px;	
     float: left;
-    margin-right: 0;
-    text-align: center;
+    
 }
 .sgr-title{
     color: red;
@@ -780,10 +778,10 @@ display: block;
     margin-right: 50px;
     
 }
-/*.block10-sgr-item ul li:last-of-type{    
+.block10-sgr-item ul li:last-of-type{    
     padding-right: 0;
     margin-right: 0;
-}*/
+}
 	</style>
 		
 	<section>
