--- a/index.html
+++ b/index.html
@@ -748,9 +748,9 @@ display: block;
 }
 .block10-sgr-item{
     padding-top: 28px;
-    padding-top: 75px;	
+    padding-left: 75px;	
     float: left;
-    
+     display: inline-block;
 }
 .sgr-title{
     color: red;
@@ -763,25 +763,26 @@ display: block;
     font-weight: 600;
     font-size: 18px;                  
 }
-.block10-sgr-item li p:first-of-type{
+		
+/*.block10-sgr-item li p:first-of-type{
     float: left;    
     margin-right: 50px;
 }
 .block10-sgr-item li p:last-of-type{
     display: inline-block;
-}
+}*/
 .block10-sgr-item p > span{
     display: block;
 }
 .block10-sgr-item ul li{    
     text-align: center;
-    margin-right: 50px;
+    margin-right: 20px;
     
 }
-.block10-sgr-item ul li:last-of-type{    
+/*.block10-sgr-item ul li:last-of-type{    
     padding-right: 0;
     margin-right: 0;
-}
+}*/
 	</style>
 		
 	<section>
