--- a/index.html
+++ b/index.html
@@ -683,13 +683,13 @@ padding: 10px;*/
 			<div class="block10-sgr-logos">
 				<ul>
 					<li>
-						<img class="sgr-img1" alt="Safe" src="img/safe.png" title="">
+						<img class="sgr-img" alt="Safe" src="img/safe.png" title="">
 					</li>
 					<li>
-						<img class="sgr-img2" alt="Green" src="img/green.png" title="">
+						<img class="sgr-img" alt="Green" src="img/green.png" title="">
 					</li>
 					<li>
-						<img class="sgr-img3" alt="Ready" src="img/phone24.png" title="">
+						<img class="sgr-img" alt="Ready" src="img/phone24.png" title="">
 					</li>
 				</ul>
 			</div>
@@ -716,73 +716,47 @@ padding: 10px;*/
 	</section><!--11-bg#3e302e-NOT-->
 	<style>
 	/*  BLOCK10 h=461 */
-		
-.sgr-img1{
-width: 100px;
-min-height: 140px;
-margin-right:80px;
-}
-.sgr-img2{
-width: 140px;
-min-height: 140px;
-margin-right:80px;
-}
-.sgr-img3{
-width: 150px;
-min-height: 140px;
-margin-right:80px;
-}		
-.block10-sgr-logos ul li{
-padding-top: 60px;	
-float: left;
-padding-left: 220px;
-    
-}
-.block10-sgr-logos img {
-display: block;
-
-}
-.block10-static-info-sgr{
-    background: #fffdfe;
-    padding: 0;
-}
-.block10-sgr-item{
-    padding-top: 28px;
-    padding-left: 75px;	
-    float: left;
-     display: inline-block;
-}
-.sgr-title{
-    color: red;
-    font-weight: 600;
-    font-size: 36px;
-    text-transform: uppercase;                
-}
-.sgr-subtitle{
-    color: red;
-    font-weight: 600;
-    font-size: 18px;                  
-}
-		
-/*.block10-sgr-item li p:first-of-type{
-    float: left;    
-    margin-right: 50px;
-}
-.block10-sgr-item li p:last-of-type{
-    display: inline-block;
-}*/
-.block10-sgr-item p > span{
-    display: block;
-}
-.block10-sgr-item ul li{    
-    text-align: center;
-    margin-right: 20px;
-    
-}
-/*.block10-sgr-item ul li:last-of-type{    
-    padding-right: 0;
-    margin-right: 0;
-}*/
+		.sgr-img {
+			width: 100px;
+			min-height: 140px;
+			margin-right: 95px;
+		}
+		.block10-sgr-logos ul li {
+			padding-top: 60px;
+			float: left;
+			padding-left: 220px;
+		}
+		.block10-sgr-logos img {
+			display: block;
+		}
+		.block10-static-info-sgr {
+			background: #fffdfe;
+			padding: 0;
+		}
+		.block10-sgr-item {
+			padding-top: 28px;
+			padding-left: 75px;
+			float: left;
+			display: inline-block;
+		}
+		.sgr-title {
+			color: red;
+			font-weight: 600;
+			font-size: 36px;
+			text-transform: uppercase;
+		}
+		.sgr-subtitle {
+			color: red;
+			font-weight: 600;
+			font-size: 18px;
+		}
+		.block10-sgr-item p>span {
+			display: block;
+		}
+		.block10-sgr-item ul li {
+			text-align: center;
+			margin-leftt: 14px;
+		}
 	</style>
 		
 	<section>
