--- a/index.html
+++ b/index.html
@@ -683,13 +683,13 @@ padding: 10px;*/
 			<div class="block10-sgr-logos">
 				<ul>
 					<li>
-						<img class="sgr-img" alt="Safe" src="img/safe.png" title="">
+						<img class="sgr-img" alt="Safe" src="img/safe.png">
 					</li>
 					<li>
-						<img class="sgr-img" alt="Green" src="img/green.png" title="">
+						<img class="sgr-img2" alt="Green" src="img/green.png">
 					</li>
 					<li>
-						<img class="sgr-img" alt="Ready" src="img/phone24.png" title="">
+						<img class="sgr-img3" alt="Ready" src="img/phone24.png">
 					</li>
 				</ul>
 			</div>
