--- a/index.html
+++ b/index.html
@@ -646,6 +646,7 @@ padding: 10px;*/
 }
 .block789-example-left p {
 	margin-bottom: 0;
+	margin-right: 30px;
 	float: left;
 }
 .block789-example-left p > span{
