--- a/index.html
+++ b/index.html
@@ -687,10 +687,10 @@ padding: 10px;*/
 						<img class="sgr-img" alt="Safe" src="img/safe.png">
 					</li>
 					<li>
-						<img class="sgr-img2" alt="Green" src="img/green.png">
+						<img alt="Green" src="img/green.png">
 					</li>
 					<li>
-						<img class="sgr-img3" alt="Ready" src="img/phone24.png">
+						<img alt="Ready" src="img/phone24.png">
 					</li>
 				</ul>
 			</div>
@@ -756,7 +756,7 @@ padding: 10px;*/
 		}
 		.block10-sgr-item ul li {
 			text-align: center;
-			margin-leftt: 14px;
+			margin-left: 14px;
 		}
 	</style>
 		
