--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@ padding: 10px;*/
    
 <style>
 .block11-content-nopic-pic {
-	background: none;
+	background: #3e302e;
 	padding: 0;
 	margin: 0;
 }
