--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ padding: 10px;*/
 		}
 		.block10-static-info-sgr {
 			background: #fffdfe;
-			padding: 0;
+			padding-bottom: 80px;
 		}
 		.block10-sgr-item {
 			padding-top: 28px;
@@ -802,20 +802,20 @@ padding: 10px;*/
 	width: auto;
 	height: auto;
 	display: block;
-	
+	padding-left: 30px;
 }
 .block11-logo{
     float: left;
     
     position:absolute; 
-    top:20px;/*forgot*/   
+    top:0px; 
     padding-left: 20px;                
 }                    
 .block11-inner-content-nopic-pic span {
     display:inline-block;
     position:absolute;
     top: 84px;
-    padding-left: 86px;
+    padding-left: 586px;
                    
 }
 .block11-title{                   
