--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ padding: 10px;*/
 		}
 		.block10-static-info-sgr {
 			background: #fffdfe;
-			padding-bottom: 80px;
+			padding-bottom: 1130px;
 		}
 		.block10-sgr-item {
 			padding-top: 28px;
@@ -756,10 +756,10 @@ padding: 10px;*/
              <div class="content64-nopic-pic">
                     <div class="inner-content64-nopic-pic">
                             <img src="">
-                            <span class="block11-logo">
+                            <p><span class="block11-logo">
                             <img src="img/upsrental.png" alt="UPS">
                             </span>
-                            <span class="block11-title">Critical Power Applications</span>    
+                            <span class="block11-title">Critical Power Applications</span><p>    
                     </div> 
               </div>
               <div class="content36-nopic-pic">
@@ -811,18 +811,17 @@ padding: 10px;*/
     top:0px; 
     padding-left: 20px;                
 }                    
-.block11-inner-content-nopic-pic span {
+.block11-inner-content-nopic-pic span p{
     display:inline-block;
     position:absolute;
-    top: 84px;
-    padding-left: 586px;
+    top: 54px;
+    padding-left: 326px;
                    
 }
 .block11-title{                   
  /* Оформление текста */
     color:#FFF;
     font-size:36px;
-    font-weight: 600; 
     text-transform: uppercase;               
     top:84px; 
     /* Фон for text*/
