--- a/index.html
+++ b/index.html
@@ -756,13 +756,13 @@ padding: 10px;*/
              <div class="content64-nopic-pic">
                     <div class="inner-content64-nopic-pic">
                         <p class="block11-logo"><img src="img/upsrental.png" alt="UPS"></p>
-                    	<p class="block11-title">Critical Power Applications</p> 
+                    	<p class="block11-title">Critical Power Ap</p> 
                     </div> 
               </div>
               <div class="content36-nopic-pic">
                     <div class="inner-content36-nopic-pic">
                         <img src="img/track.png" alt="">
-                            <!--span><div class="block11-block2-static-info-r"><div class="block11-title"></div></div></span-->    
+                            <p class="block11-title">plications</p>    
                     </div>
                </div>
            </div>
@@ -805,21 +805,19 @@ padding: 10px;*/
 }
 .inner-content64-nopic-pic {
     float: left;    
-    padding-left: 326px;  
-    padding-top: 54;
-    position: absolute;	
+    padding-left: 666px;  
+    top: 75px;
+    	
 }
 .block11-logo{
 	float: left;    
-    position:absolute; 
-    top: 54px; 
+    position:absolute;
     left: 326px;
 }
 .block11-title{
     color: #fff;
-    font-size: 36px;
-    text-transform: uppercase;
-    top:84px; 
+    font-size: 36px;    
+    position: absolute;
     /*left:20px;*/
 }
 .block11-static-info p:first-of-type{
