--- a/index.html
+++ b/index.html
@@ -756,13 +756,13 @@ padding: 10px;*/
              <div class="content64-nopic-pic">
                     <div class="inner-content64-nopic-pic">
                         <p class="block11-logo"><img src="img/upsrental.png" alt="UPS"></p>
-                    	<p class="block11-title">Critical Power Ap</p> 
+                    	<p class="block11-title">Critical Power</p> 
                     </div> 
               </div>
               <div class="content36-nopic-pic">
                     <div class="inner-content36-nopic-pic">
                         <img src="img/track.png" alt="">
-                            <p class="block11-title">plications</p>    
+                            <p class="block11-title">Applications</p>    
                     </div>
                </div>
            </div>
@@ -780,11 +780,10 @@ padding: 10px;*/
 	width: 100%;
 	float: left;
 	height: 192px;
-
+	position: relative;
 }
 .content64-nopic-pic {	
 	float: left;
-	position: relative;
 	width: 64%;
 	height: 192px;
 	top: 0;
@@ -806,9 +805,13 @@ padding: 10px;*/
 .inner-content64-nopic-pic {
     float: left;    
     padding-left: 666px;  
-    top: 75px;
-    	
+    top: 60px;    	
 }
+.inner-content36-nopic-pic {
+    float: left;    
+    padding-left: 889px;  
+    top: 60px;    	
+}	
 .block11-logo{
 	float: left;    
     position:absolute;
@@ -818,7 +821,7 @@ padding: 10px;*/
     color: #fff;
     font-size: 36px;    
     position: absolute;
-    /*left:20px;*/
+    top: 80px;
 }
 .block11-static-info p:first-of-type{
     float: left;
