--- a/index.html
+++ b/index.html
@@ -812,12 +812,14 @@ padding: 10px;*/
 	float: left;    
     position:absolute;
     left: 326px;
+    top:60px; 	
 }
 .block11-title{
     color: #fff;
     font-size: 36px;    
     position: absolute;
     top: 80px;
+    float: left;		
 }
 .block11-static-info p:first-of-type{
     float: left;
