--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ padding: 10px;*/
               <div class="content36-nopic-pic">
                     <div class="inner-content36-nopic-pic">
                         <img src="img/track.png" alt="">
-                            <p class="block11-title">Applications</p>    
+                            <p class="block11-title-r">Applications</p>    
                     </div>
                </div>
            </div>
@@ -821,10 +821,16 @@ padding: 10px;*/
     top: 80px;
     float: left;		
 }
-.block11-static-info p:first-of-type{
+.block11-title-r{
+    color: #fff;
+    font-size: 36px;    
+    position: absolute;
+    top: 80px;
+    float: left;		
+}	
+.inner-content64-nopic-pic p:first-of-type{
     float: left;
-    margin-right: 20px;
-    
+    /*margin-right: 20px;*/    
 }
 .inner-content64-nopic-pic p:last-of-type{
     display: inline-block;
