--- a/index.html
+++ b/index.html
@@ -826,7 +826,8 @@ padding: 10px;*/
     font-size: 36px;    
     position: absolute;
     top: 80px;
-    float: left;		
+    float: left;
+    left: 890px;	
 }	
 .inner-content64-nopic-pic p:first-of-type{
     float: left;
