--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@ padding: 10px;*/
              <div class="content64-nopic-pic">
                     <div class="inner-content64-nopic-pic">
                         <p class="block11-logo"><img src="img/upsrental.png" alt="UPS"></p>
-                    	<p class="block11-title">Critical Power</p> 
+                    	<p class="block11-title">Critical Power Applications</p> 
                     </div> 
               </div>
               <div class="content36-nopic-pic">
