--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ padding: 10px;*/
               <div class="content36-nopic-pic">
                     <div class="inner-content36-nopic-pic">
                         <img src="img/track.png" alt="">
-                            <p class="block11-title-r">Applications</p>    
+                            <!--p class="block11-title-r">Applications</p-->    
                     </div>
                </div>
            </div>
