--- a/index.html
+++ b/index.html
@@ -850,7 +850,35 @@ padding: 10px;*/
 				</div>
 			</div>
 		</div>
-	</section><!--block14-->
+	</section>
+	<style>
+	/*  BLOCK12  h= 351PIC*/
+
+
+.block12-content-pic-pic-pic-pic-pic{
+    background: none;
+    padding: 0;
+}
+.block12-inner-content-pic-pic-pic-pic-pic{
+    
+    width: 100%;
+    float:left;
+    min-height: 351px;
+}
+
+content20-pic-pic-pic-pic-pic {
+	float: left;
+	width: 20%;
+	height: 452px;
+}
+.content20-pic-pic-pic-pic-pic img {
+	width: auto;
+	height: auto;
+	display: block;
+	
+}
+	</style>
+	<!--block14-->
 	<section>
 		<div class="block14-contacts-information-logos clearfix">
 			<div class="logos-social-icons">
