--- a/index.html
+++ b/index.html
@@ -833,19 +833,19 @@ padding: 10px;*/
 			<div class="block12-inner-content-pic-pic-pic-pic-pic">
 				<div class="row">
 					<div class="content20-pic-pic-pic-pic-pic">
-						<div class="inner-content20-pic-pic-pic-pic-pic"><img alt="" src="img/1.jpg" title=""></div>
+						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/1.jpg" title=""><!--/div-->
 					</div>
 					<div class="content20-pic-pic-pic-pic-pic">
-						<div class="inner-content20-pic-pic-pic-pic-pic"><img alt="" src="img/2.jpg" title=""></div>
+						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/2.jpg" title=""><!--/div-->
 					</div>
 					<div class="content20-pic-pic-pic-pic-pic">
-						<div class="inner-content20-pic-pic-pic-pic-pic"><img alt="" src="img/3.jpg" title=""></div>
+						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/3.jpg" title=""><!--/div-->
 					</div>
 					<div class="content20-pic-pic-pic-pic-pic">
-						<div class="inner-content20-pic-pic-pic-pic-pic"><img alt="" src="img/4.jpg" title=""></div>
+						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/4.jpg" title=""><!--/div-->
 					</div>
 					<div class="content20-pic-pic-pic-pic-pic">
-						<div class="inner-content20-pic-pic-pic-pic-pic"><img alt="" src="img/5.jpg" title=""></div>
+						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/5.jpg" title=""><!--/div-->
 					</div>
 				</div>
 			</div>
@@ -869,7 +869,7 @@ padding: 10px;*/
 content20-pic-pic-pic-pic-pic {
 	float: left;
 	width: 20%;
-	height: 452px;
+	height: 351px;
 }
 .content20-pic-pic-pic-pic-pic img {
 	width: auto;
