--- a/index.html
+++ b/index.html
@@ -827,34 +827,42 @@ padding: 10px;*/
     display: inline-block;
 }
 </style>
-	<!--12-pic url-->
-	<section>
-		<div class="block12-content-pic-pic-pic-pic-pic clearfix">
-			<div class="block12-inner-content-pic-pic-pic-pic-pic">
-				<div class="row">
-					<div class="content20-pic-pic-pic-pic-pic">
-						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/1.jpg" title=""><!--/div-->
-					</div>
-					<div class="content20-pic-pic-pic-pic-pic">
-						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/2.jpg" title=""><!--/div-->
-					</div>
-					<div class="content20-pic-pic-pic-pic-pic">
-						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/3.jpg" title=""><!--/div-->
-					</div>
-					<div class="content20-pic-pic-pic-pic-pic">
-						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/4.jpg" title=""><!--/div-->
-					</div>
-					<div class="content20-pic-pic-pic-pic-pic">
-						<!--div class="inner-content20-pic-pic-pic-pic-pic"--><img alt="" src="img/5.jpg" title=""><!--/div-->
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	
+<section>
+    <div class="block12-content-pic-pic-pic-pic-pic clearfix" >
+        <div class="block12-inner-content-pic-pic-pic-pic-pic">
+            <div class="row">
+                <div class="content20-pic-pic-pic-pic-pic">
+                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                        <img src="img/1.jpg" alt="" title="">                    
+                    </div>
+                </div>
+                <div class="content20-pic-pic-pic-pic-pic">
+                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                        <img src="img/2.jpg" alt="" title="">                    
+                    </div>
+                </div>
+                <div class="content20-pic-pic-pic-pic-pic">
+                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                        <img src="img/3.jpg" alt="" title="">                    
+                    </div>
+                </div>
+                <div class="content20-pic-pic-pic-pic-pic">
+                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                        <img src="img/4.jpg" alt="" title="">                    
+                    </div>
+                </div>
+                <div class="content20-pic-pic-pic-pic-pic">
+                    <div class="inner-content20-pic-pic-pic-pic-pic">
+                        <img src="img/5.jpg" alt="" title="">                    
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </div>
+</section>
 	<style>
 	/*  BLOCK12  h= 351PIC*/
-
-
 .block12-content-pic-pic-pic-pic-pic{
     background: none;
     padding: 0;
@@ -863,21 +871,14 @@ padding: 10px;*/
     
     width: 100%;
     float:left;
-    min-height: 351px;
+    min-height: 300px;
+}
+.content20-pic-pic-pic-pic-pic{
+    width: 20%;
+    float:left;    
 }
 
-content20-pic-pic-pic-pic-pic {
-	float: left;
-	width: 20%;
-	height: 351px;
-}
-.content20-pic-pic-pic-pic-pic img {
-	width: auto;
-	height: auto;
-	display: block;
-	
-}
-	</style>
+</style>
 	<!--block14-->
 	<section>
 		<div class="block14-contacts-information-logos clearfix">
