--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ padding: 10px;*/
 }
 .content36-nopic-pic {
 	position: relative;
-	float: left;
+	float: right;
 	width: 36%;
 	height: 192px;
 	
@@ -799,7 +799,8 @@ padding: 10px;*/
 	width: auto;
 	height: auto;
 	display: block;
-	padding-left: 30px;
+	
+	/*padding-left: 40px;*/
 }
 .inner-content64-nopic-pic {
     float: left;    
