--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ padding: 10px;*/
 					<div class="content25-pic-pic-pic">
 						<!--div class="inner-content25-pic-pic-pic"--><img alt="" src="img/gear.png"><!--/div-->
 					</div>
-					<div class="content50-pic-pic-pic">
+					<div class="content50-pic-pic-pic-r">
 						<!--div class="inner-content50-pic-pic-pic"--><img alt="" src="img/services.png"><!--/div-->
 						<div class="block789-example-left">
 						<p>
@@ -617,6 +617,12 @@ padding: 10px;*/
 	width: 50%;
 	height: 452px;
 }
+.content50-pic-pic-pic-r {	
+	float: right;
+	position: relative;
+	width: 50%;
+	height: 452px;
+}	
 .content25-pic-pic-pic {
 	position: relative;
 	float: left;
